--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<div class="blog-meta btn1"><a href="https://minkyungkim529.github.io/rounded/" target="_blank">Website</a></div>							
 								<div class="blog-meta btn2"><a href="blog_sub/brand_bxbi/index.html" target="_blank">BI/BX guide</a></div>
 								<div class="blog-meta btn3"><a href="blog_sub/brand_web/index.html" target="_blank">Web guide</a></div>
-								<div class="blog-meta btn4"><a href="blog_sub/Ebook/samples/basic/index.html" target="_blank">E-book</a></div>
+								<div class="blog-meta btn4"><a href="https://minkyungkim529.github.io/Rounded_ebook_brand_guide/samples/basic/index.html" target="_blank">E-book</a></div>
 								<!-- <div class="blog-meta btn5"><a href="#" target="_blank">AppDesign</a></div>
 								<div class="blog-meta btn6"><a href="#" target="_blank">Movie</a></div>								 -->
 							</div>
