--- a/blog_sub/brand_web/index.html
+++ b/blog_sub/brand_web/index.html
@@ -18,7 +18,7 @@
 		<a href="#guide"><img src="images//top_btn.png" alt="top"></a>
 	</div>
     <div id="return" class="fixed">
-		<a href="../../index.html#branding">
+		<a href="../../index.html#branding" onclick="window.close()">
             <img src="images/return_btn.png" alt="return">
         </a>
 	</div>
