--- a/blog_sub/rounded_game/index.html
+++ b/blog_sub/rounded_game/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1320px, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=1320">
     <title>Rounded_3-Mach Puzzle Game</title>
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="images/favicon.png" rel="shortcut icon"/>
